--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
+/* define font of planner */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
+/* style text area */
 textarea {
   background: transparent;
   border: none;
@@ -24,12 +26,14 @@ textarea {
   border-top: 1px solid white;
 }
 
+/* style time column */
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
 }
 
+/* color-code time blocks */
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -45,6 +49,7 @@ textarea {
   color: white;
 }
 
+/* style save button */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
